--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-absl-py = "==0.9.0"
-aiohttp = "==3.7.3"
-aiohttp-cors = "==0.7.0"
-aioredis = "==1.3.1"
-alabaster = "==0.7.12"
-anaconda-client = "==1.7.2"
-anaconda-navigator = "==1.9.12"
 numpy = "*"
+matplotlib = "*"
 numba = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
